--- a/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Home.razor
+++ b/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
 
-<h1>Hello, Heitor!</h1>
+<h1>Olá Heitor, Bem vindo de Volta!</h1>
 
-Bem vindo a página inicia!
+Essa é a página inicial.
