--- a/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Sobre.razor
+++ b/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Sobre.razor
@@ -2,10 +2,8 @@
 
 <h3>Sobre</h3>
 
-Esse é um projeto .Net, para gerenciamento de estacionamento.
+Esse é um projeto .Net para gerenciamento de estacionamento.
 
 @code {
-
-
 
 }
