--- a/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Layout/NavMenu.razor
+++ b/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Layout/NavMenu.razor
@@ -12,15 +12,20 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
-        </div> 
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/sobre">
-                <span class=" bi bi-list-nested-nav-menu" aria-hidden="true"></span> Sobre
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Sobre
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/veiculos">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Veículos
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Veiculos
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/motoristas">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Motoristas
             </NavLink>
         </div>
     </nav>
