Cadastrando Veiculos e COnsultando Motoristas

--- a/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motoristas/Index.razor
+++ b/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motoristas/Index.razor
@@ -9,7 +9,7 @@
 {
     <p>Carregando...</p>
 }
-else if (motoristas.Any())
+else if (!motoristas.Any())
 {
     <p>Nenhum Motorista identificado!</p>
 }
