--- a/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Veiculos/Edit.razor
+++ b/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Veiculos/Edit.razor
@@ -1,21 +1,12 @@
 ﻿@page "/veiculos/edit/{id:int}"
 @using Estacionamento.MAUI.Models
 @inject HttpClient Http;
-<h3>Editar Veículos</h3>
+<h3>Veiculo a Editar</h3>
+
+@code
+{
 
 
-
-
-@code {
-    [Parameter]
-    public int id { get; set; }
-    private int novoVeiculo { get; set; }
-    public string novaMarca { get; set; }
-    public string novoModelo { get; set; }
-
-   
-
-   
 
 
 
