--- a/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motoristas/Details.razor
+++ b/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motoristas/Details.razor
@@ -1,8 +1,52 @@
-﻿@page "/motorista/details/{id:int}"
+﻿@page "/motoristas/details/{id:int}"
+@using Estacionamento.MAUI.Models
+@inject HttpClient Http;
 
 
-<h3>Details</h3>
 
+
+<h3>Detalhes do Motorista</h3>
+
+@if (motorista == null)
+{
+    <p><ea>Carregando...</ea></p>
+}
+else
+{
+
+    <div>
+        <h4>Motorista</h4>
+        <hr />
+
+        <dl class="row">
+            <dt class="col-sm-2">
+                Nome
+            </dt>
+            <dd class="col-sm-10">
+                @motorista.Nome
+            </dd>
+            <dt class="col-sm-2">
+                 Id do Veículo
+            </dt>
+            <dd class="col-sm-10">
+                @motorista.VeiculoID
+            </dd>
+        </dl>
+    </div>
+
+    <div>
+        <a href="/motoristas" class="btn btn-light">Voltar</a>
+    </div>
+}
 @code {
+    [Parameter]
+    public int Id { get; set; }
+    private Motorista? motorista;
+    protected override async Task OnInitializedAsync()
+    {
+        motorista = await Http.GetFromJsonAsync<Motorista>($"https://localhost:4000/api/Motoristas/{Id}");
+    }
 
 }
+
+
