--- a/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motoristas/Create.razor
+++ b/04/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motoristas/Create.razor
@@ -1,7 +1,7 @@
 ﻿@page "/motoristas/create"
-@inject HttpClient Http
 @using Estacionamento.MAUI.Models
-
+@inject HttpClient Http
+@inject NavigationManager NavigationManager
 
 <h3>Novo Motorista</h3>
 
@@ -9,35 +9,46 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form>
+        <form @onsubmit="CareteMotorista">
+            <!--Chamar a função de criar no submit-->
             <div class="form-group">
                 <label for="nome" class="control-label">Nome</label>
-                <input for="nome" class="form-control" />
+                <input for="nome" class="form-control" @bind = "motorista.Nome"/>
             </div>
             <div class="form-group">
                 <label for="veiculo" class="control-label">Veículo</label>
-                <select for="veiculo" class="form-control">
-                    <option>-Selecione um Veículo-</option>
-                    @if(veiculos != null)
+                <select for="veiculo" class="form-control" @bind="motorista.VeiculoID">
+                    <option>- Selecione um Veículo -</option>
+                    @if (veiculos != null)
                     {
-                        @foreach(var veiculo in veiculos)
+                        @foreach (var veiculo in veiculos)
                         {
-                            <option>@veiculo.Marca - @veiculo.Modelo</option>
+                            <option value="@veiculo.Id"> @veiculo.Marca - @veiculo.Modelo</option>
                         }
                     }
                 </select>
             </div>
             <div class="form-group mt-3">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
-                <a href="#" class="btn btn-light">Voltar</a>
+                <a href="/motoristas" class="btn btn-light">Voltar</a>
             </div>
         </form>
     </div>
 </div>
+
 @code {
+    Motorista motorista = new Motorista(); // Criar o objeto
     List<Veiculo>? veiculos;
+
     protected override async Task OnInitializedAsync()
     {
         veiculos = await Http.GetFromJsonAsync<List<Veiculo>>("https://localhost:4000/api/Veiculos");
+    }
+
+    // Chamar o endpiont
+    async Task CareteMotorista()
+    {
+        await Http.PostAsJsonAsync("https://localhost:4000/api/Motoristas", motorista);
+        NavigationManager.NavigateTo("/motoristas");
     }
 }
