--- a/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motorista/Details.razor
+++ b/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motorista/Details.razor
@@ -1,4 +1,4 @@
-﻿@page "/motoristas/details/{int:id}"
+﻿@page "/motoristas/details/{id:int}"
 @using Estacionamento.MAUI.Models
 @inject HttpClient Http
 
