--- a/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motorista/Edit.razor
+++ b/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Motorista/Edit.razor
@@ -1,4 +1,4 @@
-﻿@page "/motoristas/edit/{int:id}"
+﻿@page "/motoristas/edit/{id:int}"
 @using Estacionamento.MAUI.Models
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
