--- a/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Registro Estacionamento/Edit.razor
+++ b/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Registro Estacionamento/Edit.razor
@@ -1,4 +1,4 @@
-﻿@page "/registros/edit/{int:id}"
+﻿@page "/registros/edit/{id:int}"
 @using Estacionamento.MAUI.Models
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
