--- a/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Vagas/Delete.razor
+++ b/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Vagas/Delete.razor
@@ -1,4 +1,4 @@
-﻿@page "/vagas/delete/{int:id}"
+﻿@page "/vagas/delete/{id:int}"
 @using Estacionamento.MAUI.Models
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
