--- a/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Vagas/Edit.razor
+++ b/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Vagas/Edit.razor
@@ -1,4 +1,4 @@
-﻿@page "/vagas/edit/{int:id}"
+﻿@page "/vagas/edit/{id:int}"
 @using Estacionamento.MAUI.Models
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
