--- a/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Veiculo/Delete.razor
+++ b/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Veiculo/Delete.razor
@@ -1,4 +1,4 @@
-﻿@page "/veiculos/delete/{int:id}"
+﻿@page "/veiculos/delete/{id:int}"
 @using Estacionamento.MAUI.Models
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
