--- a/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Veiculo/Details.razor
+++ b/Atividade De Indicador/EstacionamentoSenac/Estacionamento.MAUI/Components/Pages/Veiculo/Details.razor
@@ -1,4 +1,4 @@
-﻿@page "/veiculos/details/{int:id}"
+﻿@page "/veiculos/details/{id:int}"
 @using Estacionamento.MAUI.Models
 @inject HttpClient Http
 
