--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Motoristas/Create.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Motoristas/Create.razor
@@ -1,7 +1,8 @@
 @page "/motoristas/create"
+@using Estacionamento.MAUI.Models
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
-@using Estacionamento.MAUI.Models
+
 
 <h3 class="text-center mb-3">Novo Motorista</h3>
 
@@ -9,27 +10,39 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form>
-        <div class="mb-3">
-            <label for="nome" class="form-label">Nome</label>
-            <InputText id="nome"  class="form-control" />
-        </div>
-        <div class="mb-3">
-            <label for="cpf" class="form-label">CPF</label>
-            <InputText id="cpf"  class="form-control" />
-        </div>
-        <div class="mb-3">
-            <label for="telefone" class="form-label">Telefone</label>
-            <InputText id="telefone"  class="form-control" />
-        </div>
+
+        <form @onsubmit="CreateMotorista">
+            <div class="form-group">
+                <label for="nome" class="control-label">Nome</label>
+                <input for="nome" class="form-control" @bind="motorista.Nome" />
+            </div>
+            <div class="form-group">
+                <label for="Cpf" class="control-label">CPF</label>
+                <input for="Cpf" class="form-control" @bind="motorista.Cpf" />
+            </div>
+            <div class="form-group">
+                <label for="Telefone" class="control-label">Telefone</label>
+                <input for="Telefone" class="form-control" @bind="motorista.Telefone" />
+            </div>
             <div class="form-group mt-3">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
                 <a href="/motoristas" class="btn btn-light">Voltar</a>
             </div>
         </form>
+
     </div>
 </div>
 
 @code {
-    
+    Motorista motorista = new Motorista();
+
+    async Task CreateMotorista()
+    {
+        await Http.PostAsJsonAsync("https://localhost:4000/api/Motoristas", motorista);
+        NavigationManager.NavigateTo("/motoristas");
+    }
+
+
+
 }
+
