--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Motoristas/Delete.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Motoristas/Delete.razor
@@ -5,7 +5,7 @@
 
 <h3 class="text-center mb-3">Excluir Motorista</h3>
 
-@if (true)
+@if (motorista == null)
 {
     <p><em>Carregando...</em></p>
 }
@@ -19,10 +19,23 @@ else
                 Nome
             </dt>
             <dd class="col-sm-10">
+                @motorista.Nome
+            </dd>
+             <dt class="col-sm-2">
+                CPF
+            </dt>
+            <dd class="col-sm-10">
+                @motorista.Cpf
+            </dd>
+             <dt class="col-sm-2">
+                Telefone
+            </dt>
+            <dd class="col-sm-10">
+                @motorista.Telefone
             </dd>
         </dl>
 
-        <form >
+        <form @onsubmit = "DeleteMotorista" >
             <input type="submit" value="Excluir" class="btn btn-danger" />
             <a href="/motoristas" class="btn btn-light">Voltar</a>
         </form>
@@ -30,5 +43,17 @@ else
 }
 
 @code {
-    
+     [Parameter]
+    public int Id{ get; set; }
+
+    private Motorista? motorista;
+    protected override async Task OnInitializedAsync()
+    {
+        motorista = await Http.GetFromJsonAsync<Motorista>($"https://localhost:4000/api/Motoristas/{Id}");
+    }
+    async Task DeleteMotorista()
+    {
+        await Http.DeleteAsync($"https://localhost:4000/api/Motoristas/{Id}");
+        NavigationManager.NavigateTo("/motoristas");
+    }
 }
