--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Motoristas/Edit.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Motoristas/Edit.razor
@@ -5,7 +5,7 @@
 
 <h3 class="text-center mb-3">Editar Motorista</h3>
 
-@if (true)
+@if (motorista == null)
 {
     <p><em>Carregando...</em></p>
 }
@@ -14,18 +14,18 @@ else
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form >
+            <form @onsubmit = "UpdateVaga" >
         <div class="mb-3">
             <label for="nome" class="form-label">Nome</label>
-            <InputText id="nome"  class="form-control" />
+                    <input id="nome" class="form-control" @bind= "@motorista.Nome" />
         </div>
         <div class="mb-3">
             <label for="cpf" class="form-label">CPF</label>
-            <InputText id="cpf"  class="form-control" />
+                    <input id="cpf" class="form-control" @bind="@motorista.Cpf" />
         </div>
         <div class="mb-3">
             <label for="telefone" class="form-label">Telefone</label>
-            <InputText id="telefone"  class="form-control" />
+                    <input id="telefone" class="form-control" @bind="@motorista.Telefone" />
         </div>
                 <div class="form-group mt-3">
                     <input type="submit" value="Salvar" class="btn btn-primary" />
@@ -37,5 +37,19 @@ else
 }
 
 @code {
-    
+    [Parameter]
+    public int Id { get; set; }
+
+    private Motorista? motorista;
+
+    protected override async Task OnInitializedAsync()
+    {
+        motorista = await Http.GetFromJsonAsync<Motorista>($"https://localhost:4000/api/Motoristas/{Id}");
+    }
+
+    async Task UpdateVaga()
+    {
+        await Http.PutAsJsonAsync($"https://localhost:4000/api/Motoristas/{Id}", motorista);
+        NavigationManager.NavigateTo("/motoristas");
+    }
 }
