--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/RegistrosEstacionamento/Delete.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/RegistrosEstacionamento/Delete.razor
@@ -1,22 +1,74 @@
-@page "/registros/delete/{Id:int}"
-@inject HttpClient Http
-@inject NavigationManager Navigation
+@page "/registros/delete/{id:int}"
 @using Estacionamento.MAUI.Models
+@inject HttpClient Http
+@inject NavigationManager NavigationManager
 
-<h3>Excluir Registro</h3>
+<h3>Excluir Registro de Estacionamento</h3>
 
-@if (true)
+@if (registros == null)
 {
     <p><em>Carregando...</em></p>
 }
 else
 {
-    <p>Você tem certeza que deseja excluir o registro do veículo <strong>Placa</strong>?</p>
-    
-    <button  class="btn btn-danger">Sim, Excluir</button>
-    <a href="/registros" class="btn btn-secondary">Não, Cancelar</a>
+
+    <div>
+        <h4>Registro Estacionamento</h4>
+        <hr />
+
+        <dl class="row">
+            <dt class="col-sm-2">
+                Id do Veículo
+            </dt>
+            <dd class="col-sm-10">
+                @registros.VeiculoId
+            </dd>
+            <dt class="col-sm-2">
+                Id da Vaga:
+            </dt>
+            <dd class="col-sm-10">
+                @registros.VagaId
+            </dd>
+            <dt class="col-sm-2">
+                Data Hora Entrada:
+            </dt>
+            <dd class="col-sm-10">
+                @registros.DataHoraEntrada
+            </dd>
+            @if (registros.DataHoraSaida != null)
+            {
+                @foreach (var RegistorEstacionamento in registroEstacionamento)
+                {
+                    <dt class="col-sm-2">
+                        @registros.DataHoraSaida
+                    </dt>
+                }
+            }
+
+        </dl>
+    </div>
+    <div>
+
+        <form @onsubmit="DeleteRegistro">
+            <input type="submit" value="Excluir" class="btn btn-danger" />
+            <a href="/registro" class="btn btn-light">Voltar</a>
+        </form>
+    </div>
 }
 
 @code {
-    
+    [Parameter]
+    public int Id { get; set; }
+    private RegistroEstacionamento? registros;
+    public string registroEstacionamento { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        registros = await Http.GetFromJsonAsync<RegistroEstacionamento>($"https://localhost:4000/api/RegistrosEstacionamento/{Id}");
+    }
+    async Task DeleteRegistro()
+    {
+        await Http.DeleteAsync($"https://localhost:4000/api/RegistrosEstacionamento/{Id}");
+        NavigationManager.NavigateTo("/registros");
+    }
 }
