--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Vagas/Create.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Vagas/Create.razor
@@ -1,11 +1,40 @@
 @page "/vagas/create"
-@inject HttpClient Http
-@inject NavigationManager Navigation
 @using Estacionamento.MAUI.Models
+@inject HttpClient Http
+@inject NavigationManager NavigationManager
 
-<h3>Criar Vaga</h3>
+
+<h3 class="text-center mb-3">Novo Vaga</h3>
+
+<hr />
+
+<div class="row">
+    <div class="col-md-4">
+
+        <form @onsubmit="CreateVaga">
+            <div class="form-group">
+                <label for="Localizacao" class="control-label">Localização</label>
+                <input for="Localizacao" class="form-control" @bind="vaga.Localizacao" />
+            </div>
+            <div class="form-group">
+                <label for="TipoVaga" class="control-label">Tipo de Vaga</label>
+                <input for="TipoVaga" class="form-control" @bind="vaga.TipoVaga" />
+            </div>
+            <div class="form-group mt-3">
+                <input type="submit" value="Salvar" class="btn btn-primary" />
+                <a href="/vagas" class="btn btn-light">Voltar</a>
+            </div>
+        </form>
+
+    </div>
+</div>
 
 
 @code {
-    
+    Vaga vaga = new Vaga();
+    async Task CreateVaga()
+    {
+        await Http.PostAsJsonAsync("https://localhost:4000/api/Vagas", vaga);
+        NavigationManager.NavigateTo("/vagas");
+    }
 }
