--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Vagas/Delete.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Vagas/Delete.razor
@@ -1,22 +1,57 @@
-@page "/vagas/delete/{Id:int}"
-@inject HttpClient Http
-@inject NavigationManager Navigation
+@page "/vagas/delete/{id:int}"
 @using Estacionamento.MAUI.Models
+@inject HttpClient Http
+@inject NavigationManager NavigationManager
 
-<h3>Excluir Vaga</h3>
+<h3>Excluxão de Vagas</h3>
 
-@if (false)
+@if (vaga == null)
 {
     <p><em>Carregando...</em></p>
 }
 else
 {
-    <p>Você tem certeza que deseja excluir a vaga <strong>Localizacao</strong>?</p>
-    
-    <button  class="btn btn-danger">Sim, Excluir</button>
-    <a href="/vagas" class="btn btn-secondary">Não, Cancelar</a>
+
+    <div>
+        <h4>Registro Estacionamento</h4>
+        <hr />
+
+        <dl class="row">
+            <dt class="col-sm-2">
+                Local da Vaga
+            </dt>
+            <dd class="col-sm-10">
+                @vaga.Localizacao
+            </dd>
+            <dt class="col-sm-2">
+                Tipo de Vaga:
+            </dt>
+            <dd class="col-sm-10">
+                @vaga.TipoVaga
+            </dd>
+        </dl>
+    </div>
+    <div>
+
+        <form @onsubmit="DeleteVaga">
+            <input type="submit" value="Excluir" class="btn btn-danger" />
+            <a href="/vagas" class="btn btn-light">Voltar</a>
+        </form>
+    </div>
 }
 
 @code {
-    
+    [Parameter]
+    public int Id { get; set; }
+    private Vaga? vaga;
+    protected override async Task OnInitializedAsync()
+    {
+        vaga = await Http.GetFromJsonAsync<Vaga>($"https://localhost:4000/api/Vagas/{Id}");
+    }
+    async Task DeleteVaga()
+    {
+        await Http.DeleteAsync($"https://localhost:4000/api/Vagas/{Id}");
+        NavigationManager.NavigateTo("/vagas");
+    }
+
 }
