--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Vagas/Index.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Vagas/Index.razor
@@ -1,40 +1,43 @@
 @page "/vagas"
-@inject HttpClient Http
-@inject NavigationManager Navigation
 @using Estacionamento.MAUI.Models
+@inject HttpClient Http
 
-<h3 class="text-center mb-3">Lista de Vagas</h3>
 
-<a href="/vagas/create" class="btn btn-primary mb-3">Nova Vaga</a>
+<h3>Index</h3>
 
-@if (true)
+<a href="/vagas/create" class="btn btn-primary">Cadastrar</a>
+
+@if (vagas == null)
 {
-    <p><em>Carregando...</em></p>
+    <p>Carregando...</p>
 }
-else if (false)
+else if (!vagas.Any())
 {
-    <p><em>Nenhuma vaga encontrada.</em></p>
+    <p>Nenhuma vaga encontrada.</p>
 }
 else
 {
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Localização</th>
-                <th>Tipo</th>
-                <th>Ações</th>
+                <th scope="col">Id</th>
+                <th scope="col">Localização</th>
+                <th scope="col">Tipo de Vaga</th>
+                <th scope="col">Ações</th>
             </tr>
         </thead>
         <tbody>
-            @* @foreach (var vaga in vagas) *@
+            @foreach (var vaga in vagas)
             {
                 <tr>
-                    <td>Localizacao</td>
-                    <td>TipoVaga</td>
+                    <td>@vaga.Id</td>
+                    <td>@vaga.Localizacao</td>
+                    <td>@vaga.TipoVaga</td>
+
                     <td>
-                        <a href="#" class="btn btn-sm btn-warning">Editar</a>
-                        <a href="#" class="btn btn-sm btn-info">Detalhes</a>
-                        <a href="#" class="btn btn-sm btn-danger">Excluir</a>
+                        <a href="/vagas/edit/@vaga.Id" class="btn btn-warning">Editar</a>
+                        <a href="/vagas/details/@vaga.Id" class="btn btn-info">Detalhes</a>
+                        <a href="/vagas/delete/@vaga.Id" class="btn btn-danger">Excluir</a>
                     </td>
                 </tr>
             }
@@ -43,5 +46,11 @@ else
 }
 
 @code {
-    
+    List<Vaga>? vagas;
+
+    protected override async Task OnInitializedAsync()
+    {
+        vagas = await Http.GetFromJsonAsync<List<Vaga>>("https://localhost:4000/api/Vagas");
+    }
+
 }
