--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Veiculos/Create.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Veiculos/Create.razor
@@ -1,41 +1,63 @@
-@page "/veiculos/create"
+@page "/veiclos/create"
+@using Estacionamento.MAUI.Models
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
-@using Estacionamento.MAUI.Models
 
-<h3 class="text-center mb-3">Novo Veículo</h3>
+
+<h3 class="text-center mb-3">Novo Veículoo</h3>
 
 <hr />
 
 <div class="row">
     <div class="col-md-4">
-        <form >
-        <div class="mb-3">
-            <label for="placa" class="form-label">Placa</label>
-            <InputText id="placa" class="form-control" />
-        </div>
-        <div class="mb-3">
-            <label for="modelo" class="form-label">Modelo</label>
-            <InputText id="modelo" class="form-control" />
-        </div>
-        <div class="mb-3">
-            <label for="cor" class="form-label">Cor</label>
-            <InputText id="cor" class="form-control" />
-        </div>
-        <div class="mb-3">
-            <label for="motorista" class="form-label">Motorista</label>
-            @* <InputSelect id="motorista" class="form-select">
-                <option value="0">Selecione um motorista</option>                
-            </InputSelect> *@
-        </div>
+
+        <form @onsubmit="CreateVeiculo">
+            <div class="form-group">
+                <label for="Placa" class="control-label">Placa</label>
+                <input for="Placa" class="form-control" @bind="veiculo.Placa" />
+            </div>
+            <div class="form-group">
+                <label for="Modelo" class="control-label">Modelo</label>
+                <input for="Modelo" class="form-control" @bind="veiculo.Modelo" />
+            </div>
+            <div class="form-group">
+                <label for="Cor" class="control-label">Cor</label>
+                <input for="Cor" class="form-control" @bind="veiculo.Cor" />
+            </div>
+            <select for="motorista" class="form-control" @bind="veiculo.MotoristaId">
+                <option value="">- Selecione um Motorista -</option>
+                @if (motoristas != null)
+                {
+                    @foreach (var motorista in motoristas)
+                    {
+                        <option value="@motorista.Id">@motorista.Nome</option>
+                    }
+                }
+            </select>
+            <div class="form-group">
+            </div>
             <div class="form-group mt-3">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
                 <a href="/veiculos" class="btn btn-light">Voltar</a>
             </div>
         </form>
+
+
     </div>
 </div>
 
 @code {
-   
+    Veiculo veiculo = new Veiculo();
+    List<Motorista>? motoristas;
+
+    protected override async Task OnInitializedAsync()
+    {
+        motoristas = await Http.GetFromJsonAsync<List<Motorista>>("https://localhost:4000/api/Motoristas");
+    }
+    async Task CreateVeiculo()
+    {
+        await Http.PostAsJsonAsync("https://localhost:4000/api/Veiculo", veiculo);
+        NavigationManager.NavigateTo("/veiculos");
+    }
+
 }
