--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Veiculos/Details.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Veiculos/Details.razor
@@ -1,10 +1,10 @@
 @page "/veiculos/details/{id:int}"
-@inject HttpClient Http
 @using Estacionamento.MAUI.Models
+@inject HttpClient Http
 
-<h3 class="text-center mb-3">Detalhes do Veículo</h3>
+<h3>Detalhes do Veículo</h3>
 
-@if (true)
+@if (veiculo == null)
 {
     <p><em>Carregando...</em></p>
 }
@@ -13,18 +13,47 @@ else
     <div>
         <h4>Veículo</h4>
         <hr />
+
         <dl class="row">
-    <p><strong>Placa:</strong> </p>
-    <p><strong>Modelo:</strong> </p>
-    <p><strong>Cor:</strong> </p>
-    <p><strong>Motorista:</strong> </p>
+            <dt class="col-sm-2">
+                Placa
+            </dt>
+            <dd class="col-sm-10">
+                @veiculo.Placa
+            </dd>
+            <dt class="col-sm-2">
+                Modelo
+            </dt>
+            <dd class="col-sm-10">
+                @veiculo.Modelo
+            </dd>
+            <dt class="col-sm-2">
+                Cor
+            </dt>
+            <dd class="col-sm-10">
+                @veiculo.Cor
+            </dd>
+            <dt class="col-sm-2">
+                Id do Motorista:
+            </dt>
+            <dd class="col-sm-10">
+                @veiculo.MotoristaId
+            </dd>
         </dl>
     </div>
+
     <div>
         <a href="/veiculos" class="btn btn-light">Voltar</a>
     </div>
 }
 
 @code {
-    
+    [Parameter]
+    public int Id { get; set; }
+    private Veiculo? veiculo;
+
+    protected override async Task OnInitializedAsync()
+    {
+        veiculo = await Http.GetFromJsonAsync<Veiculo>($"https://localhost:4000/api/Veiculos/{Id}");
+    }
 }
