--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Veiculos/Edit.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/Veiculos/Edit.razor
@@ -1,11 +1,12 @@
-@page "/veiculos/edit/{id:int}"
+@page "/veiclos/edit/{id:int}"
+@using Estacionamento.MAUI.Models
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
-@using Estacionamento.MAUI.Models
 
-<h3 class="text-center mb-3">Editar Veículo</h3>
 
-@if (false)
+<h3>Editar Veiculo</h3>
+
+@if (veiculo == null)
 {
     <p><em>Carregando...</em></p>
 }
@@ -14,26 +15,23 @@ else
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form >
-        <div class="mb-3">
-            <label for="placa" class="form-label">Placa</label>
-            <InputText id="placa"  class="form-control" />
-        </div>
-        <div class="mb-3">
-            <label for="modelo" class="form-label">Modelo</label>
-            <InputText id="modelo"  class="form-control" />
-        </div>
-        <div class="mb-3">
-            <label for="cor" class="form-label">Cor</label>
-            <InputText id="cor"  class="form-control" />
-        </div>
-        <div class="mb-3">
-            <label for="motorista" class="form-label">Motorista</label>
-            @* <InputSelect id="motorista"  class="form-select">
-                <option value="0">Selecione um motorista</option>
-                
-            </InputSelect> *@
-        </div>
+            <form @onsubmit="UpdateVeiculo">
+                <div class="form-group">
+                    <label for="Placa" class="control-label">Placa</label>
+                    <input for="Placa" class="form-control" @bind="veiculo.Placa" />
+                </div>
+                <div class="form-group">
+                    <label for="Modelo" class="control-label">Modelo</label>
+                    <input for="Modelo" class="form-control" @bind="veiculo.Modelo" />
+                </div>
+                <div class="form-group">
+                    <label for="Cor" class="control-label">Cor</label>
+                    <input for="Cor" class="form-control" @bind="veiculo.Cor" />
+                </div>
+                <div class="form-group">
+                    <label for="MotoristaId" class="control-label">MotoristaId</label>
+                    <input for="MotoristaId" class="form-control" @bind="veiculo.MotoristaId" />
+                </div>
                 <div class="form-group mt-3">
                     <input type="submit" value="Salvar" class="btn btn-primary" />
                     <a href="/veiculos" class="btn btn-light">Voltar</a>
@@ -44,5 +42,20 @@ else
 }
 
 @code {
-    
+    [Parameter]
+    public int Id { get; set; }
+
+    private Veiculo? veiculo;
+
+    protected override async Task OnInitializedAsync()
+    {
+        veiculo = await Http.GetFromJsonAsync<Veiculo>($"https://localhost:4000/api/veiculos/{Id}");
+    }
+
+    async Task UpdateVeiculo()
+    {
+        await Http.PutAsJsonAsync($"https://localhost:4000/api/Veiculos/{Id}", veiculo);
+        NavigationManager.NavigateTo("/veiculos");
+    }
+
 }
