--- a/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/RegistrosEstacionamento/Create.razor
+++ b/Atividade De Indicador/EstacionamentoDesktop/Estacionamento.MAUI/Components/Pages/RegistrosEstacionamento/Create.razor
@@ -14,11 +14,11 @@
         <form @onsubmit="CreateRegistro">
             <div class="form-group">
                 <label for="DataHoraEntrada" class="control-label">Data e Hora de Entrada</label>
-                <input for="DataHoraEntrada" class="form-control" @bind="registroEstacionamento.DataHoraEntrada" />
+                <input type="datetime-local" class="form-control" @bind="registroEstacionamento.DataHoraEntrada" />
             </div>
             <div class="form-group">
                 <label for="DataHoraSaida" class="control-label">Data e Hora de Saída</label>
-                <input for="DataHoraSaida" class="form-control" @bind="registroEstacionamento.DataHoraSaida" />
+                <input for="datetime-local" class="form-control" @bind="registroEstacionamento.DataHoraSaida" />
             </div>
             <div class="form-group">
                 <label for="ValorFinal" class="control-label">Valor Final</label>
@@ -67,8 +67,8 @@
     }
     async Task CreateRegistro()
     {
-        await Http.PostAsJsonAsync("https://localhost:4000/api/Vaga", vagas);
-        NavigationManager.NavigateTo("/vagas");
+        await Http.PostAsJsonAsync("/api/registrosEstacionamento", registroEstacionamento);
+        NavigationManager.NavigateTo("/registros");
     }
 
 }
